Menyelesaikan halaman beranda dan kategori, menambahkan efek card pada produk.

--- a/index.html
+++ b/index.html
@@ -71,15 +71,13 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-6 align-self-center">
-                  <h1 class="home-title">The Best Fast<br />Food in Town</h1>
-                  <h5 class="my-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Labore quas doloremque explicabo facere aliquam, sit
-                    adipisci ea ut. Iure, alias.
-                  </h5>
+                  <h1 class="home-tittle">Makan enak</h1>
+                  <h3 class="home-description my-3">
+                    dengan harga <br />terjangkau.
+                  </h3>
                   <a
                     href="/menu.html"
-                    class="btn btn-success px-4 text-white mt-4"
+                    class="btn btn-success px-4 text-white my-4"
                     >Pesan
                   </a>
                 </div>
@@ -97,111 +95,206 @@
           </div>
         </div>
       </section>
-      <!-- Menu Favorit -->
-      <section class="menu-favorit">
+
+      <!-- Pelayanan -->
+      <section class="pelayanan">
         <div class="container">
-          <div class="row">
-            <div class="col-12" data-aos="fade-up">
-              <h5>Menu Favorit</h5>
+          <div class="row text-center">
+            <div class="col" data-aos="fade-up">
+              <h3>Pelayanan</h3>
             </div>
           </div>
-          <div class="row">
+          <div class="row justify-content-center">
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-3 text-center"
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
-                </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
-              </a>
+              <img
+                class="pelayanan-gambar"
+                src="/images/makanan-enak.svg"
+                alt="makanan"
+              />
+              <div class="pelayanan-tittle">Makanan Enak</div>
+              <div class="pelayanan-deskripsi">
+                Kami menawarkan<br />makanan yang lezat<br />dan higienis
+              </div>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-3 text-center"
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
-                </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
-              </a>
+              <img
+                class="pelayanan-gambar"
+                src="/images/murah.svg"
+                alt="harga-murah"
+              />
+              <div class="pelayanan-tittle">Terjangkau</div>
+              <div class="pelayanan-deskripsi">
+                Harga makanan dan<br />minuman terjangkau
+              </div>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-3 text-center"
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
-                </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
-              </a>
-            </div>
-            <div
-              class="col-6 col-md-4 col-lg-3"
-              data-aos="fade-up"
-              data-aos-delay="400"
-            >
-              <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
-                </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
-              </a>
-            </div>
-          </div>
-          <!--           <div class="row">
-            <div class="col-sm-10 my-auto pesan">
-              <h5 class="my-auto">
-                These are our best menu that you can pick. Click button at right
-                side for more menu
-              </h5>
-            </div>
-            <div class="col-sm-2 tombol">
-              <a href="/menu.html" class="btn btn-success px-4 ml-5 text-white"
-                >Pesan
-              </a>
-            </div>
-          </div> -->
-          <div class="pesan d-lg-flex justify-content-between">
-            <h5 class="my-auto" data-aos="fade-up" data-aos-delay="300">
-              These are our best menu that you can pick. Click button at right
-              side for more menu
-            </h5>
-            <div class="tombol">
-              <a
-                href="/menu.html"
-                class="btn btn-success px-4 text-white"
-                data-aos="fade-up"
-                data-aos-delay="300"
-                >Pesan</a
-              >
+              <img
+                class="pelayanan-gambar"
+                src="/images/pengiriman.svg"
+                alt="pengiriman"
+              />
+              <div class="pelayanan-tittle">Pengiriman</div>
+              <div class="pelayanan-deskripsi">
+                Gratis biaya<br />pengiriman sekitar<br />wilayah cibitung
+              </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- Menu Favorit -->
+      <section class="menu-favorit">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-12" data-aos="fade-up">
+              <h3>Menu Favorit</h3>
+            </div>
+          </div>
+          <div class="row">
+            <div
+              class="col-md-6 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="/details.html" class="menu-produk d-block">
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="/details.html" class="menu-produk d-block">
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="/details.html" class="menu-produk d-block">
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="/details.html" class="menu-produk d-block">
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
+                </div>
+              </a>
+            </div>
+        </div>
+        <div class="row ">
+          <div class="col-md-9 my-auto">
+            <div class="pesan">
+              <h4 class="my-auto" data-aos="fade-up" data-aos-delay="300">
+                These are our best menu that you can pick. Click button at right
+                side for more menu
+              </h4>
+            </div>
+          </div>
+            <div class="col-md-2 pesan">
+              <div class="tombol float-right">
+                <a
+                  href="/menu.html"
+                  class="btn btn-success px-4 text-white"
+                  data-aos="fade-up"
+                  data-aos-delay="300"
+                  >Pesan
+                  </a>
+              </div>
+            </div>
+        </div>
+      </section>
     </div>
+    
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row" style="margin-top: 40px;">
+          <div class="col-md-3">
+            <p class="font-weight-bold">Warteg Sari</p>
+          </div>
+          <div class="col-md-3">
+            <p class="font-weight-bold">Kontak Kami</p>
+            <p>+62 8515 5288 869</p>
+            <p>wartegsari@gmail.com</p>
+          </div>
+          <div class="col-md-3">
+            <p class="font-weight-bold">Alamat</p>
+            <p>JL. Raya Setu - Serang,
+              <br>Cibenning, Kec. Setu, 
+              <br>Bekasi,
+              <br>Jawa Barat, 17320.</p>
+          </div>
+        </div>
+        <div class="row text-center" style="margin-top:40px;">
+        <div class="col">
+          <p>2021 Copyright Warteg Sari. All Rights Reserved.</p>
+        </div>
+      </div>
+      </div>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.slim.min.js"></script>
