--- a/menu.html
+++ b/menu.html
@@ -41,11 +41,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="/index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
-              <a href="/menu.html" class="nav-link">Menu</a>
+              <a href="/menu.html" class="nav-link active">Menu</a>
             </li>
             <li class="nav-item">
               <a href="/kontak.html" class="nav-link">Kontak</a>
@@ -64,6 +64,7 @@
 
     <!-- Page Content -->
     <div class="page-content pages-home">
+
       <!-- Hero Menu -->
       <section data-aos="fade-up" data-aos-delay="200">
         <div class="container">
@@ -72,6 +73,7 @@
           </div>
         </div>
       </section>
+
       <!-- Ketegori -->
       <section class="kategori">
         <div class="container">
@@ -91,148 +93,202 @@
           </div>
         </div>
       </section>
+
       <!-- Produk -->
       <section class="produk">
         <div class="container">
-          <!--           <div class="row">
-            <div class="col-12" data-aos="fade-up">
-              <h5>New Products</h5>
-            </div>
-          </div> -->
           <div class="row">
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="100"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="200"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="300"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="400"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="500"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="600"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="700"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
             <div
-              class="col-6 col-md-4 col-lg-3"
+              class="col-md-6 col-lg-3"
               data-aos="fade-up"
               data-aos-delay="800"
             >
               <a href="/details.html" class="menu-produk d-block">
-                <div class="produk-thumbnail">
-                  <div
-                    class="produk-gambar"
-                    style="background-image: url(/images/apple-watch.jpg)"
-                  ></div>
+                <div class="card">
+                  <div class="produk-thumbnail">
+                    <div
+                      class="produk-gambar"
+                      style="background-image: url(/images/apple-watch.jpg)"
+                    ></div>
+                  </div>
+                  <div class="card-body">
+                    <div class="produk-teks card-tittle">Apple Watch 4</div>
+                    <div class="produk-harga">Rp.50000-,</div>
+                  </div>
                 </div>
-                <div class="produk-teks">Apple Watch 4</div>
-                <div class="produk-harga">Rp.50000-,</div>
               </a>
             </div>
-          </div>
         </div>
       </section>
     </div>
 
+  <!-- Footer -->
+  <footer>
+  <div class="container">
+    <div class="row" style="margin-top: 40px;">
+      <div class="col-md-3">
+        <p class="font-weight-bold">Warteg Sari</p>
+      </div>
+      <div class="col-md-3">
+        <p class="font-weight-bold">Kontak Kami</p>
+        <p>+62 8515 5288 869</p>
+        <p>wartegsari@gmail.com</p>
+      </div>
+      <div class="col-md-3">
+        <p class="font-weight-bold">Alamat</p>
+        <p>JL. Raya Setu - Serang,
+          <br>Cibenning, Kec. Setu, 
+          <br>Bekasi,
+          <br>Jawa Barat, 17320.</p>
+      </div>
+    </div>
+    <div class="row text-center" style="margin-top:40px;">
+    <div class="col">
+      <p>2021 Copyright Warteg Sari. All Rights Reserved.</p>
+    </div>
+  </div>
+  </div>
+  </footer>
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.slim.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
